Result now keeps the Column info alongside each column mapping for access to   the column metadata when accessing the result.